[project]
name = "companion-collect"
version = "0.1.0"
description = "Companion App ingest service"
authors = [{ name = "MutDashboard" }]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "redis>=5.0",
    "asyncpg>=0.29",
    "pyjwt>=2.10.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["companion_collect*"]
exclude = ["archive*", "research*", "frida*", "tests*", "scripts*", "docs*"]

[dependency-groups]
dev = [
    "mitmproxy>=11.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
